# botho

./: .env.example  .gitignore  .loom-managed  ACKNOWLEDGMENTS.md  AUDIT.md  BUILD.md  Brewfile  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NEXT_SESSION.md  PLAN.md  README.md  SECURITY.md  UPGRADING.md  buf.work.yaml  deny.toml  package.json  rust-toolchain
account-keys/: Cargo.toml  README.md
account-keys/benches/: account_keys_benchmarks.rs
account-keys/src/: account_keys.rs  burn_address.rs  domain_separators.rs  error.rs  identity.rs  lib.rs  quantum_safe.rs
account-keys/types/: Cargo.toml
account-keys/types/src/: lib.rs  (+1 more)
address-codec/: Cargo.toml  README.md
address-codec/src/: lib.rs
admin-http-gateway/: Cargo.toml
api/: Cargo.toml  README.md  build.rs
api/proto/: blockchain.proto  external.proto  printable.proto  quorum_set.proto  watcher.proto
api/src/: display.rs  lib.rs
api/tests/: prost.rs  tokens.rs
attest/ake/: Cargo.toml
attest/api/: Cargo.toml
attest/core/: Cargo.toml
attest/enclave-api/: Cargo.toml
attest/trusted/: Cargo.toml
attest/untrusted/: Cargo.toml
botho/: Cargo.toml  README.md  build.rs
botho-exchange-scanner/: Cargo.toml  README.md
botho-exchange-scanner/src/: config.rs  deposit.rs  lib.rs  main.rs  scanner.rs  subaddress.rs  sync.rs
botho-wallet/: Cargo.toml  README.md
botho-wallet/src/: decoy_selection.rs  discovery.rs  fee_estimation.rs  keys.rs  lib.rs  main.rs  ring_builder.rs  rpc_pool.rs  secmem.rs  storage.rs  transaction.rs  transaction_legacy.rs
botho-wallet/tests/: integration_tests.rs
botho/benches/: block_benchmarks.rs  mempool_benchmarks.rs  traffic_normalization.rs  transport_benchmarks.rs
botho/src/: address.rs  block.rs  config.rs  decoy_selection.rs  lib.rs  main.rs  mempool.rs  monetary.rs  operator_action.rs  operator_key.rs  operator_nonce.rs  pow.rs  telemetry.rs  transaction.rs  transaction_pq.rs  wallet.rs
botho/tests/: byzantine_integration.rs  chain_sync_catchup_integration.rs  chaos_tests.rs  circuit_handshake_integration.rs  compact_block_integration.rs  consensus_cluster_convergence.rs  e2e_consensus_integration.rs  e2e_faucet_workflow.rs  e2e_progressive_fees.rs  e2e_transfer_patterns.rs  fingerprint_resistance.rs  ice_stun_integration.rs  issue_998_fresh_genesis_liveness.rs  ledger_consistency_integration.rs  load_tests.rs  network_integration.rs  onion_broadcast_integration.rs  pq_compatibility.rs  pq_integration.rs  privacy_integration.rs  relay_handler_integration.rs  rpc_integration.rs  signaling_integration.rs  timing_tests.rs  traffic_indistinguishability.rs  transport_negotiation_integration.rs  tx_lifecycle_integration.rs
cadence/: Cargo.toml
cadence-wallet/: Cargo.toml
cadence-wallet/src/: discovery.rs  keys.rs  lib.rs  main.rs  rpc_pool.rs  storage.rs  transaction.rs
cadence-wallet/tests/: integration_tests.rs
cadence/src/: block.rs  config.rs  main.rs  mempool.rs  transaction.rs  wallet.rs
cluster-tax/: Cargo.toml  INTEGRATION_DESIGN.md  PHASE2_COMMITTED_TAGS_DESIGN.md  README.md  TRACK_A_ECONOMIC_VALIDATION.md
cluster-tax/benches/: committed_tags_benchmarks.rs
cluster-tax/docs/: README.md  piecewise_linear_fee_curve.md  privacy_analysis.md  provenance_fees.md  wealth_cluster_tax.md
cluster-tax/scripts/: README.md  botho_fee_model.py  cadence_fee_model.py  generate_figures.py  gini_10yr_model.py  gini_3segment.py  gini_account_model.py  gini_cluster_model.py  gini_simple_utxo.py  gini_single_step.py  gini_utxo_model.py  plot_gini.py  provenance_reference.py  tag_drift_simulation.py  utxo_debug.py  wealth_cluster_tax.py
cluster-tax/src/: age_decay.rs  analysis.rs  block_decay.rs  bridge_import.rs  cluster.rs  demurrage.rs  dynamic_fee.rs  emission.rs  entropy_decay.rs  fee_curve.rs  lib.rs  lottery.rs  monetary.rs  signing.rs  tag.rs  transfer.rs  validate.rs
common/: Cargo.toml  README.md
common/src/: hasher_builder.rs  lib.rs  lru.rs  node_id.rs  panic_handler.rs  responder_id.rs  sentry.rs  time.rs
connection/: Cargo.toml  README.md
connection/src/: credentials.rs  error.rs  lib.rs  manager.rs  sync.rs  thick.rs  traits.rs
connection/test-utils/: Cargo.toml
core/: Cargo.toml  README.md
core/examples/: slip10.rs
core/src/: consts.rs  lib.rs  subaddress.rs
core/tests/: README.md  slip10_key.json  slip10_mnemonic.json
core/types/: Cargo.toml
discover/: Cargo.toml  README.md
discover/src/: main.rs
enclave-boundary/: Cargo.toml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_add_block.rs  fuzz_address_parsing.rs  fuzz_block.rs  fuzz_bridge_attestation.rs  fuzz_bridge_ethereum_parse.rs  fuzz_bridge_reserve_math.rs  fuzz_bridge_solana_parse.rs  fuzz_clsag.rs  fuzz_cluster_tax_math.rs  fuzz_federation_status_line.rs  fuzz_lion_signature.rs  fuzz_lottery_validation.rs  fuzz_mlkem_decapsulation.rs  fuzz_multi_input_balance.rs  fuzz_network_messages.rs  fuzz_polynomial.rs  fuzz_pq_keys.rs  fuzz_pq_transaction.rs  fuzz_ring_signature.rs  fuzz_rpc_request.rs  fuzz_subaddress.rs  fuzz_transaction.rs
fuzz/src/: bridge_attestation.rs  bridge_ethereum_parse.rs  bridge_reserve_math.rs  bridge_solana_parse.rs  federation_status_line.rs  lib.rs
gossip/: Cargo.toml  README.md
gossip/src/: analyzer.rs  behaviour.rs  config.rs  consensus_integration.rs  error.rs  lib.rs  messages.rs  rate_limit.rs  service.rs  store.rs
mobilecoind/: Cargo.toml
mobilecoind-dev-faucet/: Cargo.toml
mobilecoind-json/: Cargo.toml
mobilecoind/api/: Cargo.toml
mobilecoind/src/: config.rs  conversions.rs  payments.rs  service.rs  sync.rs  test_utils.rs
peers/: Cargo.toml
peers/src/: broadcast.rs  connection.rs  consensus_msg.rs  error.rs  lib.rs  sync.rs  threaded_broadcaster.rs  threaded_broadcaster_retry.rs  traits.rs
peers/test-utils/: Cargo.toml
wasm-test/: Cargo.toml
watcher/: Cargo.toml  README.md
watcher/api/: Cargo.toml  README.md
watcher/src/: attestation_evidence_collector.rs  block_data_store.rs  config.rs  error.rs  lib.rs  metrics.rs  watcher.rs  watcher_db.rs
(+1451 files in other folders)
