[workspace]
members = [
    "botho",
    "botho-wallet",
    "cluster-tax",
    "discover",
    "account-keys",
    "gossip",
    "account-keys/types",
    "api",
    "blockchain/types",
    "blockchain/validators",
    "common",
    "connection",
    "connection/test-utils",
    "consensus/api",
    "consensus/scp",
    "consensus/scp/play",
    "consensus/scp/types",
    "core",
    "core/types",
    "crypto/box",
    "crypto/digestible",
    "crypto/digestible/derive/test",
    "crypto/digestible/signature",
    "crypto/digestible/test-utils",
    "crypto/keys",
    "crypto/memo-mac",
    "crypto/multisig",
    "crypto/noise",
    "crypto/pq",
    "crypto/ring-signature",
    "crypto/ring-signature/signer",
    "crypto/sig",
    "crypto/x509/test-vectors",
    "ledger/db",
    "ledger/migration",
    "ledger/sync",
    "peers",
    "peers/test-utils",
    "test-vectors/account-keys",
    "test-vectors/b58-encodings",
    "test-vectors/memos",
    "test-vectors/tx-out-records",
    "transaction/builder",
    "transaction/core",
    "transaction/core/test-utils",
    "transaction/extra",
    "transaction/signer",
    "transaction/summary",
    "transaction/types",
    "util/build/grpc-tonic",
    "util/build/script",
    "util/cli",
    "util/from-random",
    "util/grpc-tonic",
    "util/host-cert",
    "util/keyfile",
    "util/lmdb",
    "util/logger-macros",
    "util/metered-channel",
    "util/metrics",
    "util/parse",
    "util/repr-bytes",
    "util/serial",
    "util/telemetry",
    "util/test-helper",
    "util/test-vector",
    "util/u64-ratio",
    "util/uri",
    "util/vec-map",
    "util/zip-exact",
]
exclude = [
    # bt-util-serial should only be accessed via the `common` crate.
    "util/serial",
    # Watcher is SGX-specific and removed post-SGX
    "watcher",
    "watcher/api",
    # grpcio utilities replaced by tonic
    "util/grpc",
    "util/build/grpc",
]

resolver = "2"

[workspace.package]
rust-version = "1.83.0"

[workspace.dependencies]
aead = { version = "0.5", default-features = false }
aes = "0.8"
aes-gcm = "0.10"
aligned-cmov = "2"
anyhow = "1"
assert_cmd = "2"
assert_matches = "1"
async-channel = "2"
async-trait = "0.1"
backtrace = "0.3"
balanced-tree-index = "2"
base64 = { version = "0.21", default-features = false }
bincode = "1"
bitflags = { version = "2", default-features = false }
blake2 = { version = "0.10", default-features = false }
bs58 = "0.4"
bulletproofs-og = { version = "3.0.0-pre.1", default-features = false }
cargo-emit = "0.2"
cargo_metadata = "0.18"
cc = "1"
cfg-if = "1"
chrono = { version = "0.4", default-features = false }
clap = "4"
clio = "0.3"
cookie = "0.18"
crc = { version = "3", default-features = false }
criterion = "0.5"
crossbeam-channel = "0.5"
ctr = "0.9"
ctrlc = "3"
curve25519-dalek = { version = "4", default-features = false }
der = { version = "0.7", default-features = false }
diesel = "2"
diesel-derive-enum = "2"
diesel_migrations = "2"
digest = { version = "0.10", default-features = false }
dashmap = "6"
dirs = "5"
displaydoc = { version = "0.2", default-features = false }
dyn-clone = "1"
ed25519 = { version = "2", default-features = false }
ed25519-dalek = { version = "2", default-features = false }
fs_extra = "1"
futures = "0.3"
generic-array = { version = "0.14", default-features = false }
getrandom = "0.2"
hashbrown = { version = "0.14", default-features = false }
heapless = { version = "0.8", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
hex-literal = "0.4"
hex_fmt = "0.3"
hkdf = "0.12"
hmac = "0.12"
hostname = "0.3"
itertools = "0.12"
json = "0.12"
lazy_static = "1"
libc = "0.2"
libp2p = { version = "0.54", default-features = false }
libz-sys = "1"
link-cplusplus = "1"
lmdb-rkv = "0.14"
log = "0.4"
maplit = "1"
mbedtls = { version = "0.8", default-features = false }
mbedtls-sys-auto = "2"
mc-oblivious-aes-gcm = { version = "0.10", default-features = false }
mc-oblivious-traits = { version = "2", features = ["no_asm_insecure"] }
mc-rand = "1"
merlin = { version = "3", default-features = false }
mockall = "0.12"
more-asserts = "0.3"
num_cpus = "1"
once_cell = { version = "1", default-features = false }
opentelemetry = "0.25"
opentelemetry-otlp = "0.25"
opentelemetry_sdk = "0.25"
p256 = { version = "0.13", default-features = false }
pem = "3"
percent-encoding = "2"
pkg-config = "0.3"
portpicker = "0.1"
pqcrypto-dilithium = { version = "0.5", default-features = false }
pqcrypto-kyber = { version = "0.8", default-features = false }
pqcrypto-traits = { version = "0.3", default-features = false }
predicates = "3"
primitive-types = "0.12"
proc-macro2 = "1"
prometheus = "0.13"
proptest = { version = "1", default-features = false }
prost = { version = "0.12", default-features = false, features = ["derive"] }
prost-build = "0.12"
protobuf = "2"
quote = "1"
r2d2 = "0.8"
rand = { version = "0.8", default-features = false }
rand_chacha = "0.3"
rand_core = { version = "0.6", default-features = false }
rand_hc = { version = "0.3", default-features = false }
randomx-rs = "1.3"
rayon = "1"
regex = "1"
reqwest = { version = "0.11", default-features = false }
retry = "2"
rocket = "0.5"
rusoto_core = { version = "0.48", default-features = false }
rusoto_s3 = { version = "0.48", default-features = false }
schnorrkel-og = { version = "0.11.0-pre.0", default-features = false }
secrecy = "0.8"
semver = "1"
sentry = { version = "0.32", default-features = false }
serde = { version = "1", default-features = false }
serde_cbor = { version = "0.11", default-features = false }
serde_derive = "1"
serde_json = { version = "1", default-features = false, features = ["alloc"] }
serde_with = { version = "3", default-features = false }
serial_test = "3"
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
signal-hook = "0.3"
signature = { version = "2", default-features = false }
siphasher = "1"
slip10_ed25519 = "0.1"
slog = { version = "2", default-features = false }
slog-async = "2"
slog-atomic = "3"
slog-envlogger = "2"
slog-json = "2"
slog-scope = "4"
slog-stdlog = "4"
slog-term = "2"
static_assertions = "1"
stdext = "0.3"
subtle = { version = "2", default-features = false }
syn = "2"
tempfile = "3"
textwrap = "0.16"
thiserror = "1"
tiny-bip39 = "1"
tokio = "1"
tokio-stream = "0.1"
toml = "0.8"
tonic = { version = "0.10", default-features = false }
tonic-build = { version = "0.10", default-features = false }
tracing = "0.1"
url = "2"
walkdir = "2"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
x25519-dalek = { version = "2", default-features = false }
x509-cert = { version = "0.2", default-features = false }
x509-signature = "0.5"
yare = "2"
zeroize = { version = "1", default-features = false }

bt-account-keys = { path = "account-keys", default-features = false }
bt-account-keys-types = { path = "account-keys/types" }
bt-api = { path = "api" }
bt-blockchain-test-utils = { path = "blockchain/test-utils" }
bt-blockchain-types = { path = "blockchain/types" }
bt-cluster-tax = { path = "cluster-tax" }
bt-common = { path = "common", default-features = false }
bt-connection = { path = "connection" }
bt-connection-test-utils = { path = "connection/test-utils" }
bt-consensus-api = { path = "consensus/api" }
bt-consensus-scp = { path = "consensus/scp" }
bt-consensus-scp-types = { path = "consensus/scp/types" }
bt-core = { path = "core", default-features = false }
bt-core-types = { path = "core/types", default-features = false }
bt-crypto-box = { path = "crypto/box" }
bt-crypto-digestible = { path = "crypto/digestible", default-features = false }
bt-crypto-digestible-derive = { path = "crypto/digestible/derive", default-features = false }
bt-crypto-digestible-signature = { path = "crypto/digestible/signature", default-features = false }
bt-crypto-digestible-test-utils = { path = "crypto/digestible/test-utils" }
bt-crypto-hashes = { path = "crypto/hashes", default-features = false }
bt-crypto-keys = { path = "crypto/keys", default-features = false }
bt-crypto-memo-mac = { path = "crypto/memo-mac" }
bt-crypto-multisig = { path = "crypto/multisig", default-features = false }
bt-crypto-noise = { path = "crypto/noise", default-features = false }
bt-crypto-pq = { path = "crypto/pq", default-features = false }
bt-crypto-ring-signature = { path = "crypto/ring-signature", default-features = false }
bt-crypto-ring-signature-signer = { path = "crypto/ring-signature/signer", default-features = false }
bt-crypto-x509-test-vectors = { path = "crypto/x509/test-vectors" }
bt-ledger-db = { path = "ledger/db" }
bt-ledger-migration = { path = "ledger/migration" }
bt-ledger-sync = { path = "ledger/sync" }
bt-peers = { path = "peers" }
bt-peers-test-utils = { path = "peers/test-utils" }
bt-test-vectors-account-keys = { path = "test-vectors/account-keys" }
bt-test-vectors-b58-encodings = { path = "test-vectors/b58-encodings" }
bt-test-vectors-definitions = { path = "test-vectors/definitions" }
bt-test-vectors-tx-out-records = { path = "test-vectors/tx-out-records" }
bt-transaction-builder = { path = "transaction/builder" }
bt-transaction-core = { path = "transaction/core", default-features = false }
bt-transaction-core-test-utils = { path = "transaction/core/test-utils" }
bt-transaction-extra = { path = "transaction/extra" }
bt-transaction-summary = { path = "transaction/summary" }
bt-transaction-types = { path = "transaction/types", default-features = false }
bt-util-build-grpc-tonic = { path = "util/build/grpc-tonic" }
bt-util-build-info = { path = "util/build/info" }
bt-util-build-script = { path = "util/build/script" }
bt-util-cli = { path = "util/cli" }
bt-util-from-random = { path = "util/from-random", default-features = false }
bt-util-grpc-tonic = { path = "util/grpc-tonic" }
bt-util-host-cert = { path = "util/host-cert", default-features = false }
bt-util-keyfile = { path = "util/keyfile" }
bt-util-lmdb = { path = "util/lmdb" }
bt-util-logger-macros = { path = "util/logger-macros" }
bt-util-metered-channel = { path = "util/metered-channel" }
bt-util-metrics = { path = "util/metrics" }
bt-util-parse = { path = "util/parse" }
bt-util-repr-bytes = { path = "util/repr-bytes", default-features = false }
bt-util-serial = { path = "util/serial", default-features = false }
bt-util-telemetry = { path = "util/telemetry" }
bt-util-test-helper = { path = "util/test-helper", default-features = false }
bt-util-test-vector = { path = "util/test-vector" }
bt-util-test-with-data = { path = "util/test-with-data" }
bt-util-u64-ratio = { path = "util/u64-ratio" }
bt-util-uri = { path = "util/uri" }
bt-util-vec-map = { path = "util/vec-map" }
bt-util-zip-exact = { path = "util/zip-exact", default-features = false }
bt-gossip = { path = "gossip" }
bt-discover = { path = "discover" }

[profile.dev]
opt-level = 0
rpath = true

[profile.release]
opt-level = 3
rpath = false
lto = false
debug-assertions = false
overflow-checks = false

[profile.mobile]
inherits = "release"
debug = false
lto = true

[profile.mobile-release]
inherits = "mobile"
codegen-units = 1
lto = false

# Skip the need for LD_LIBRARY_PATH in `cargo test`
[profile.test]
rpath = true

[profile.ci]
# Build config.
inherits = "test"
# Enable some compiler optimizations.
opt-level = 2
# LLVM's Link-Time Optimization: Some, relatively quick to generate.
lto = "thin"

[patch.crates-io]
# Fork and rename to use "OG" dalek-cryptography with latest dependencies.
bulletproofs-og = { git = "https://github.com/mobilecoinfoundation/bulletproofs.git", rev = "9abfdc054d9ba65f1e185ea1e6eff3947ce879dc" }

# mbedtls patched to allow certificate verification with a profile
mbedtls = { git = "https://github.com/mobilecoinfoundation/rust-mbedtls.git", rev = "f82523478a1dd813ca381c190175355d249a8123" }
mbedtls-sys-auto = { git = "https://github.com/mobilecoinfoundation/rust-mbedtls.git", rev = "f82523478a1dd813ca381c190175355d249a8123" }

# Override lmdb-rkv for a necessary bugfix (see https://github.com/mozilla/lmdb-rs/pull/80)
lmdb-rkv = { git = "https://github.com/mozilla/lmdb-rs", rev = "df1c2f5" }

# Fork and rename to use "OG" dalek-cryptography.
schnorrkel-og = { git = "https://github.com/mobilecoinfoundation/schnorrkel.git", rev = "049bf9d30f3bbe072e2ad1b5eefdf0f3c851215e" }

# Fixes the following:
# * Allow enabling `serde/std` without also requiring `serde_cbor/std` to be enabled.
#   See: https://github.com/pyfisch/cbor/pull/198
serde_cbor = { git = "https://github.com/mobilecoinofficial/cbor", rev = "4c886a7c1d523aae1ec4aa7386f402cb2f4341b5" }
