[workspace]
members = [
    "botho",
    "botho-wallet",
    "botho-exchange-scanner",
    "bridge/core",
    "bridge/service",
    "cluster-tax",
    "discover",
    "account-keys",
    "gossip",
    "account-keys/types",
    "common",
    "consensus/scp",
    "consensus/scp/play",
    "consensus/scp/types",
    "core",
    "core/types",
    "crypto/box",
    "crypto/digestible",
    # "crypto/digestible/derive/test",  # Removed - depends on deleted test utilities
    "crypto/digestible/signature",
    "crypto/keys",
    "crypto/multisig",
    "crypto/pq",
    "crypto/lion",
    "crypto/ring-signature",
    "crypto/ring-signature/signer",
    "crypto/secp256k1",
    "crypto/sig",
    "transaction/core",
    "transaction/signer",
    "transaction/types",
    "util/from-random",
    "util/host-cert",
    "util/logger-macros",
    "util/repr-bytes",
    "util/serial",
    "util/test-helper",
    "util/u64-ratio",
    "util/uri",
    "util/zip-exact",
    "web/packages/desktop/src-tauri",
    "mobile/rust-bridge",
]
exclude = [
    "contracts",
    "fuzz",
    "util/serial",
]

resolver = "2"

[workspace.package]
rust-version = "1.83.0"

[workspace.dependencies]
aead = { version = "0.5", default-features = false }
aes = "0.8"
aes-gcm = "0.10"
aligned-cmov = "2"
anyhow = "1"
assert_cmd = "2"
assert_matches = "1"
async-channel = "2"
async-trait = "0.1"
backtrace = "0.3"
balanced-tree-index = "2"
base64 = { version = "0.21", default-features = false }
bincode = "1"
bitflags = { version = "2", default-features = false }
blake2 = { version = "0.10", default-features = false }
bs58 = "0.4"
bulletproofs-og = { version = "3.0.0-pre.1", default-features = false }
cargo-emit = "0.2"
cargo_metadata = "0.18"
cc = "1"
cfg-if = "1"
chrono = { version = "0.4", default-features = false }
clap = "4.5"
crc = { version = "3", default-features = false }
criterion = "0.5"
crossbeam-channel = "0.5"
ctr = "0.9"
curve25519-dalek = { version = "4", default-features = false }
der = { version = "0.7", default-features = false }
digest = { version = "0.10", default-features = false }
dashmap = "6"
dirs = "5"
displaydoc = { version = "0.2", default-features = false }
dyn-clone = "1"
ed25519 = { version = "2", default-features = false }
ed25519-dalek = { version = "2", default-features = false }
futures = "0.3"
generic-array = { version = "0.14", default-features = false }
getrandom = "0.2"
hashbrown = { version = "0.14", default-features = false }
heapless = { version = "0.8", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
hex-literal = "0.4"
hex_fmt = "0.3"
hkdf = "0.12"
indicatif = "0.17"
hmac = "0.12"
hostname = "0.3"
itertools = "0.12"
json = "0.12"
lazy_static = "1"
libc = "0.2"
libp2p = { version = "0.56", default-features = false }
log = "0.4"
maplit = "1"
mc-oblivious-aes-gcm = { version = "0.10", default-features = false }
mc-oblivious-traits = { version = "2", features = ["no_asm_insecure"] }
mc-rand = "1"
merlin = { version = "3", default-features = false }
mockall = "0.12"
more-asserts = "0.3"
num_cpus = "1"
once_cell = { version = "1", default-features = false }
p256 = { version = "0.13", default-features = false }
pem = "3"
percent-encoding = "2"
predicates = "3"
primitive-types = "0.12"
proc-macro2 = "1"
proptest = { version = "1", default-features = false }
prost = { version = "0.12", default-features = false, features = ["derive"] }
prost-build = "0.12"
postcard = { version = "1", default-features = false, features = ["alloc"] }
quote = "1"
rand = { version = "0.8", default-features = false, features = ["std_rng"] }
rand_chacha = "0.3"
rand_core = { version = "0.6", default-features = false }
rand_hc = { version = "0.3", default-features = false }
rand_distr = { version = "0.4", default-features = false }
randomx-rs = "1.3"
rayon = "1"
regex = "1"
reqwest = { version = "0.12", default-features = false }
retry = "2"
schnorrkel-og = { version = "0.11.0-pre.0", default-features = false }
secrecy = "0.8"
semver = "1"
sentry = { version = "0.34", default-features = false }
serde = { version = "1", default-features = false }
serde_derive = "1"
serde_json = { version = "1", default-features = false, features = ["alloc"] }
serde_with = { version = "3", default-features = false }
serial_test = "3"
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
signal-hook = "0.3"
signature = { version = "2", default-features = false }
siphasher = "1"
slip10_ed25519 = "0.1"
slog = { version = "2", default-features = false }
slog-async = "2"
slog-atomic = "3"
slog-envlogger = "2"
slog-json = "2"
slog-scope = "4"
slog-stdlog = "4"
slog-term = "2"
static_assertions = "1"
subtle = { version = "2", default-features = false }
syn = "2"
tempfile = "3"
thiserror = "1"
tiny-bip39 = "1"
tokio = "1"
tokio-stream = "0.1"
toml = "0.9"
tracing = "0.1"
url = "2"
walkdir = "2"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
x25519-dalek = { version = "2", default-features = false }
x509-cert = { version = "0.2", default-features = false }
x509-signature = "0.5"
yare = "2"
zeroize = { version = "1", default-features = false }

bth-account-keys = { path = "account-keys", default-features = false }
bth-account-keys-types = { path = "account-keys/types" }
bth-cluster-tax = { path = "cluster-tax" }
bth-common = { path = "common", default-features = false }
bth-consensus-scp = { path = "consensus/scp" }
bth-consensus-scp-types = { path = "consensus/scp/types" }
bth-core = { path = "core", default-features = false }
bth-core-types = { path = "core/types", default-features = false }
bth-crypto-box = { path = "crypto/box" }
bth-crypto-digestible = { path = "crypto/digestible", default-features = false }
bth-crypto-digestible-derive = { path = "crypto/digestible/derive", default-features = false }
bth-crypto-digestible-signature = { path = "crypto/digestible/signature", default-features = false }
bth-crypto-hashes = { path = "crypto/hashes", default-features = false }
bth-crypto-keys = { path = "crypto/keys", default-features = false }
bth-crypto-multisig = { path = "crypto/multisig", default-features = false }
bth-crypto-pq = { path = "crypto/pq", default-features = false }
bth-crypto-lion = { path = "crypto/lion", default-features = false }
bth-crypto-ring-signature = { path = "crypto/ring-signature", default-features = false }
bth-crypto-ring-signature-signer = { path = "crypto/ring-signature/signer", default-features = false }
bth-crypto-secp256k1 = { path = "crypto/secp256k1", default-features = false }
bth-bridge-core = { path = "bridge/core", default-features = false }
bth-bridge-service = { path = "bridge/service" }
bth-transaction-core = { path = "transaction/core", default-features = false }
bth-transaction-types = { path = "transaction/types", default-features = false }
bth-util-from-random = { path = "util/from-random", default-features = false }
bth-util-host-cert = { path = "util/host-cert", default-features = false }
bth-util-logger-macros = { path = "util/logger-macros" }
bth-util-repr-bytes = { path = "util/repr-bytes", default-features = false }
bth-util-serial = { path = "util/serial", default-features = false }
bth-util-test-helper = { path = "util/test-helper", default-features = false }
bth-util-u64-ratio = { path = "util/u64-ratio" }
bth-util-uri = { path = "util/uri" }
bth-util-zip-exact = { path = "util/zip-exact", default-features = false }
bth-gossip = { path = "gossip" }
bth-discover = { path = "discover" }

[profile.dev]
opt-level = 0
rpath = true

[profile.release]
opt-level = 3
rpath = false
lto = false
debug-assertions = false
overflow-checks = false

[profile.mobile]
inherits = "release"
debug = false
lto = true

[profile.mobile-release]
inherits = "mobile"
codegen-units = 1
lto = false

[profile.test]
rpath = true

[profile.ci]
inherits = "test"
opt-level = 2
lto = "thin"

[patch.crates-io]
bulletproofs-og = { git = "https://github.com/mobilecoinfoundation/bulletproofs.git", rev = "9abfdc054d9ba65f1e185ea1e6eff3947ce879dc" }
schnorrkel-og = { git = "https://github.com/mobilecoinfoundation/schnorrkel.git", rev = "049bf9d30f3bbe072e2ad1b5eefdf0f3c851215e" }
