[package]
name = "mc-account-keys"
version = "7.1.0"
authors = ["MobileCoin"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
rust-version = { workspace = true }

[features]
std = ["mc-util-repr-bytes/alloc"]
prost = ["dep:prost", "mc-util-repr-bytes/prost", "mc-crypto-keys/prost"]
serde = ["dep:serde", "mc-crypto-keys/serde", "curve25519-dalek/serde"]
default = [
    "std",
    "prost",
    "serde",
    "mc-util-serial",
    "mc-crypto-digestible/default",
    "mc-crypto-hashes/default",
    "mc-crypto-keys/default",
]

[dependencies]

curve25519-dalek = { workspace = true }
# External dependencies
displaydoc = { workspace = true }
hex_fmt = { workspace = true }
hkdf = { workspace = true }
prost = { workspace = true, features = ["prost-derive"], optional = true }
rand_core = { workspace = true }
serde = { workspace = true, features = ["alloc", "derive"], optional = true }
subtle = { workspace = true }
zeroize = { workspace = true }

# MobileCoin dependencies
mc-account-keys-types = { workspace = true }
mc-core = { workspace = true }
mc-crypto-digestible = { workspace = true }
mc-crypto-hashes = { workspace = true }
mc-crypto-keys = { workspace = true }
mc-util-from-random = { workspace = true }
mc-util-repr-bytes = { workspace = true }
mc-util-serial = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }

mc-test-vectors-account-keys = { workspace = true }
mc-util-test-helper = { workspace = true }
mc-util-test-vector = { workspace = true }
mc-util-test-with-data = { workspace = true }
rand = { workspace = true }
rand_hc = { workspace = true }

[[bench]]
name = "account_keys_benchmarks"
harness = false
