[package]
name = "bt-account-keys"
version = "7.1.0"
authors = ["Botho"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
rust-version = { workspace = true }

[features]
std = ["bt-util-repr-bytes/alloc"]
prost = ["dep:prost", "bt-util-repr-bytes/prost", "bt-crypto-keys/prost"]
serde = ["dep:serde", "bt-crypto-keys/serde", "curve25519-dalek/serde"]
pq = ["dep:bt-crypto-pq", "dep:bs58", "dep:sha2", "std"]  # Post-quantum keys require std
default = [
    "std",
    "prost",
    "serde",
    "bt-util-serial",
    "bt-crypto-digestible/default",
    "bt-crypto-hashes/default",
    "bt-crypto-keys/default",
]

[dependencies]

curve25519-dalek = { workspace = true }
# External dependencies
bs58 = { workspace = true, optional = true }
displaydoc = { workspace = true }
hex_fmt = { workspace = true }
hkdf = { workspace = true }
prost = { workspace = true, features = ["prost-derive"], optional = true }
rand_core = { workspace = true }
serde = { workspace = true, features = ["alloc", "derive"], optional = true }
sha2 = { workspace = true, optional = true }
subtle = { workspace = true }
zeroize = { workspace = true }

# Botho dependencies
bt-account-keys-types = { workspace = true }
bt-core = { workspace = true }
bt-crypto-digestible = { workspace = true }
bt-crypto-hashes = { workspace = true }
bt-crypto-keys = { workspace = true }
bt-crypto-pq = { workspace = true, optional = true }
bt-util-from-random = { workspace = true }
bt-util-repr-bytes = { workspace = true }
bt-util-serial = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }

bt-test-vectors-account-keys = { workspace = true }
bt-util-test-helper = { workspace = true }
bt-util-test-vector = { workspace = true }
bt-util-test-with-data = { workspace = true }
rand = { workspace = true }
rand_hc = { workspace = true }

[[bench]]
name = "account_keys_benchmarks"
harness = false
