[package]
name = "bth-account-keys"
version = "7.1.0"
authors = ["Botho"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
rust-version = { workspace = true }

[features]
std = ["bth-util-repr-bytes/alloc"]
prost = ["dep:prost", "bth-util-repr-bytes/prost", "bth-crypto-keys/prost"]
serde = ["dep:serde", "bth-crypto-keys/serde", "curve25519-dalek/serde"]
pq = ["dep:bth-crypto-pq", "dep:bs58", "dep:sha2", "std"]  # Post-quantum keys require std
default = [
    "std",
    "prost",
    "serde",
    "bth-util-serial",
    "bth-crypto-digestible/default",
    "bth-crypto-hashes/default",
    "bth-crypto-keys/default",
]

[dependencies]

curve25519-dalek = { workspace = true }
# External dependencies
bs58 = { workspace = true, optional = true }
displaydoc = { workspace = true }
hex_fmt = { workspace = true }
hkdf = { workspace = true }
prost = { workspace = true, features = ["prost-derive"], optional = true }
rand_core = { workspace = true }
serde = { workspace = true, features = ["alloc", "derive"], optional = true }
sha2 = { workspace = true, optional = true }
subtle = { workspace = true }
zeroize = { workspace = true }

# Botho dependencies
bth-account-keys-types = { workspace = true }
bth-core = { workspace = true }
bth-crypto-digestible = { workspace = true }
bth-crypto-hashes = { workspace = true }
bth-crypto-keys = { workspace = true }
bth-crypto-pq = { workspace = true, optional = true }
bth-util-from-random = { workspace = true }
bth-util-repr-bytes = { workspace = true }
bth-util-serial = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }

bth-test-vectors-account-keys = { workspace = true }
bth-util-test-helper = { workspace = true }
bth-util-test-vector = { workspace = true }
bth-util-test-with-data = { workspace = true }
rand = { workspace = true }
rand_hc = { workspace = true }

[[bench]]
name = "account_keys_benchmarks"
harness = false
