[package]
name = "mc-admin-http-gateway"
version = "7.1.0"
authors = ["MobileCoin"]
edition = "2021"
license = "GPL-3.0"
readme = "README.md"
rust-version = { workspace = true }

[dependencies]
mc-common = { workspace = true, features = ["loggers"] }
mc-util-grpc = { workspace = true }
mc-util-uri = { workspace = true }

clap = { workspace = true, features = ["derive", "env"] }
grpcio = { workspace = true, features = ["prost-codec"] }
rocket = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
serde = { workspace = true, features = ["alloc", "derive"] }
